[project]
name = "calib"
version = "0.1.0"
description = "WaveCams calibration tool"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    'ruff',
    'typer',
    'opencv-python-headless',
    'numpy',
    "matplotlib"
]

[dependency-groups]
    doc = [
        'mkdocs',
        'mkdocs-material',
        'mkdocstrings[python]',
        'mkdocs-gen-files',
        'mkdocs-literate-nav',
        'mkdocs-section-index'
    ]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
calib = "calib.cli.app:app"
